When doing GetMinimumWidgetSize for HTML buttons, use the minimum size (TS_MIN) rather than the preferred size (TS_TRUE).  b=375073  r+sr=roc  a=blocking1.9+